# SkeletonDemo

./: .gitignore  CMakeLists.txt  CapgSkeleton.h  Macros.h  MeanShift.cpp  MeanShift.h  SimpleSilhouette.cpp  SimpleSilhouette.h  SkeletonPlugin.cpp  SkeletonPlugin.h  SkeletonTracker.cpp  SkeletonTracker.h  Vector3.h  bodyPartRecognizer.cpp  bodyPartRecognizer.h  bprTree.cpp  denseDefine.h  depthFeature.cpp  depthFeature.h  depthSample.cpp  depthSample.h  logCat.cpp  logCat.h  test-git.txt  train_sgf.cpp  train_sgf.h
feature/: cv_forest_0  cv_forest_1  cv_forest_2  cv_forest_3  cv_forest_4  forest_feature_0  forest_feature_1  forest_feature_2  forest_feature_3  forest_feature_4  forest_para
sgf_seed/: CmakeLists.txt  Holefilling.cpp  Holefilling.h  Node.h  SkeletonStream.h  config.txt  main.cpp  readme.txt  sgf_segment.cpp  sgf_segment.h
skeleton_test/: CMakeLists.txt  main.cpp  main_train.cpp
